<resources>

    <string name="app_name">社区服务DEMO</string>

    <string name="system_error">系统出错</string>

    <!--居民属性-->
    <string name="community_id">社区编号：</string>
    <string name="passwd">密码：</string>
    <string name="identity_number">身份证号：</string>
    <string name="resident_name">居民姓名：</string>
    <string name="phone_number">手机号码：</string>
    <string name="permission_level">权限等级：</string>

    <!--公告属性-->
    <string name="notice_id">公告编号</string>
    <string name="notice_time">公告时间</string>
    <string name="notice_title">公告标题 </string>
    <string name="notice_content">公告内容</string>

    <!--管理员等级-->
    <string name="pl_user">普通用户</string>
    <string name="pl_user_manager">用户管理员</string>
    <string name="pl_system_manager">系统管理员</string>

    <!--登录界面-->
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="username_hint">请输入用户名（用户名为数字格式）</string>
    <string name="password_hint">请输入密码（初始密码为123456）</string>
    <string name="login">登录</string>
    <string name="username_error">用户名输入错误！</string>
    <string name="password_error">密码不能为空！</string>
    <string name="login_error">用户名或密码输入错误！</string>
    <string name="login_succeed">登录成功！</string>
    <string name="manager_detected">检测到您是管理员</string>

    <!--启动界面-->
    <string name="splash_info">这是一个简单的社区服务APP</string>
    <string name="first_use">检测到这是您第一次使用该应用，请直接输入用户信息</string>

    <!--管理员界面-->
    <string name="add_resident">添加居民</string>
    <string name="manage_resident">管理居民</string>
    <string name="add_notice">添加公告</string>

    <!--居民添加界面-->
    <string name="resident_add_hint">请输入你要添加的新记录</string>
    <string name="first_add_hind">第一名用户会被自动设为系统管理员</string>

    <string name="insert_in">请在此输入身份证号</string>
    <string name="insert_rn">请在此输入姓名</string>
    <string name="insert_pn">请在此输入电话号码</string>
    <string name="insert_end">输入完成</string>
    <string name="first_insert">首次输入</string>

    <string name="err_in_hint">身份证号输入错误！</string>
    <string name="err_rn_hint">姓名输入错误！</string>
    <string name="err_pn_hint">手机号输入错误！</string>
    <string name="repetitive_in_add">已有相同信息的居民，不能添加！</string>

    <string name="insert_succeed">添加成功！</string>
    <string name="first_succeed">添加成功，应用即将重启……</string>

    <!--公告添加界面-->
    <string name="notice_add_hint">请输入你要添加的公告</string>
    <string name="insert_nt">请在此输入公告标题</string>
    <string name="insert_nc">请在此输入公告内容</string>
    <string name="announce_notice">发布公告</string>

    <!--用户界面-->
    <string name="system_welcome">欢迎使用社区服务系统</string>
    <string name="view_personal_info">查看个人信息</string>
    <string name="view_notice">查看社区公告</string>
    <string name="manager_function">管理员功能</string>

    <!--查看个人信息界面-->
    <string name="personal_info">个人信息</string>
    <string name="my_info">我的个人信息</string>
    <string name="update_info">修改信息</string>
    <string name="delete_info">删除信息</string>
    <string name="save_info">保存信息</string>
    <string name="insert_cid">请在此输入社区编号</string>
    <string name="insert_pw">请在此输入密码</string>

    <!--查看社区公告界面-->
    <string name="notice">公告</string>
    <string name="update_notice">修改公告</string>
    <string name="delete_notice">删除公告</string>
    <string name="save_notice">保存公告</string>

    <!--居民一览界面-->
    <string name="resident_info">居民信息</string>

    <!--公告一览界面-->
    <string name="notice_info">社区公告</string>

    <string name="repetitive_in_update">新的身份证号不可用，不能修改！</string>
    <string name="update_succeed">修改成功！</string>
    <string name="delete_succeed">删除成功！</string>

    <!--密码修改界面-->
    <string name="first_login">检测到这是您第一次登录，请修改密码</string>
    <string name="first_pw">请输入新密码</string>
    <string name="first_pw_hint">在此输入新密码</string>
    <string name="second_pw">请重新输入新密码</string>
    <string name="second_pw_hint">在此重新输入新密码</string>
    <string name="change_pw">修改密码</string>
    <string name="pw_empty">密码为空，请重新输入</string>
    <string name="repetitive_pw">您输入的密码与初始密码一致，请输入其他密码</string>
    <string name="pw_match_err">两次输入的密码不匹配，请重新输入</string>
    <string name="change_pw_succeed">修改密码完成，返回登录界面……</string>

</resources>
