<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNoticeActivity">

    <TextView
        android:id="@+id/tv_add_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/notice_add_hint"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_add_nl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_add_notice"
        android:text="@string/notice_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_insert_nl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_add_nl"
        android:hint="@string/insert_nt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_add_nc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_insert_nl"
        android:text="@string/notice_content"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_insert_nc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_add_nc"
        android:hint="@string/insert_nc"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/bt_insert_notice_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/announce_notice"
        android:textSize="20sp" />

</RelativeLayout>