<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NoticeActivity">

    <TextView
        android:id="@+id/tv_view_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:text="@string/notice_info"
        android:textAlignment="center"
        android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/ll_notice_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_view_notice"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_nid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/notice_id" />

        <TextView
            android:id="@+id/tv_nt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/notice_time" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_view_nl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_notice_info"
        android:text="@string/notice_title"
        android:textSize="20sp" />

    <ViewSwitcher
        android:id="@+id/vs_nl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_view_nl"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_nl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/notice_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_nl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_nt"
            android:inputType="text"
            android:textSize="20sp" />
    </ViewSwitcher>

    <TextView
        android:id="@+id/tv_view_nc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vs_nl"
        android:layout_marginTop="30dp"
        android:text="@string/notice_content"
        android:textSize="20sp" />

    <ViewSwitcher
        android:id="@+id/vs_nc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_view_nc"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_nc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/notice_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_nc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_nc"
            android:inputType="textMultiLine"
            android:textSize="20sp" />
    </ViewSwitcher>

    <Button
        android:id="@+id/bt_update_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_update_notice"
        android:text="@string/update_notice" />

    <LinearLayout
        android:id="@+id/ll_update_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_save_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save_notice" />

        <Button
            android:id="@+id/bt_delete_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/delete_notice" />
    </LinearLayout>

</RelativeLayout>