<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ManagerActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manager_function"
        android:textAlignment="center"
        android:textSize="50sp" />

    <Button
        android:id="@+id/bt_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_resident"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_to_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_resident"
        android:textSize="20sp" />

</LinearLayout>